...
    <string name="homescreen_recent_id" translatable="false">homescreen_recent_id</string>
    <string name="homescreen_recent_heading">Recent</string>

    <string name="title_activity_main" translatable="false">MainActivity</string>
    <string name="tab_title_main">Main</string>
    <string name="tab_title_todo">Todo</string>
    <string name="tab_title_assignments">Assign.</string>
    <string name="assignments">Assignments</string>
    <string name="todo_addButton_content_description">Add</string>
    <string name="todo_input_hint">Enter a new item here ...</string>
    <string name="string_todo_active_header" translatable="false">Active</string>
    <string name="string_todo_done_header" translatable="false">Done</string>

    <string name="switch_language_button">Chinese</string>
    <string name="settings_drawable_txt">Settings</string>
...
